splite in template in components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,95 +1,1 @@
-<header class="bg-blue pt-14 h-64 text-center">
-  <h1 class="uppercase font-bold text-white text-2xl ">Bienvenue sur votre gestionnaire de tâche
-  </h1>
-</header>
-
-
-<section class="mb-5 relative bottom-32">
-  <div class="flex justify-center">
-    <form class="container max-w-screen-md flex gap-5">
-      <input class="custom-input" placeholder="Saisissez la tâche" />
-      <p-button class="bg-yellow custom-btn" label="Ajouter" icon="pi pi-plus-circle"></p-button>
-    </form>
-  </div>
-</section>
-
-<section class="relative bottom-32">
-  <div class="flex justify-center">
-    <div
-      class="h-full container max-w-screen-md   rounded-lg shadow-lg shadow-primary-light  bg-white flex flex-col  overflow-hidden">
-      <div class=" border-b-2 border-yellow flex justify-between items-center px-5 py-5">
-        <h2>tâches restantes: <strong>564</strong></h2>   
-        <div class="flex gap-10 items-center">
-          <h2 class="cursor-pointer active">Tous les tâches</h2>
-          <h2 class="cursor-pointer">tâches Terminées</h2>
-          <h2 class="cursor-pointer">tâches Incomplètes</h2>
-        </div>
-      </div>
-      <ul class="pb-10">
-        <li class="border-b-2 border-yellow px-5  py-5">
-          <div class="flex justify-between">
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, qui? </h2>
-              <span class="badge badge-finish">terminées</span>
-            </div>
-            <div class="flex gap-5">
-              <i class="pi pi-trash cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-              <i class="pi pi-pencil cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-            </div>
-          </div>
-        </li>
-
-        <li class="border-b-2 border-yellow px-5  py-5">
-          <div class="flex justify-between">
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, qui? </h2>
-              <span class="badge badge-start">incomplètes</span>
-            </div>
-            <div class="flex gap-5">
-              <i class="pi pi-trash cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-              <i class="pi pi-pencil cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-            </div>
-          </div>
-        </li>
-
-        <li class="border-b-2 border-yellow px-5  py-5">
-          <div class="flex justify-between">
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, qui? </h2>
-              <span class="badge badge-finish">terminées</span>
-            </div>
-            <div class="flex gap-5">
-              <i class="pi pi-trash cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-              <i class="pi pi-pencil cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-            </div>
-          </div>
-        </li>
-        <li class="border-b-2 border-yellow px-5  py-5">
-          <div class="flex justify-between">
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, qui? </h2>
-              <span class="badge badge-finish">terminée</span>
-            </div>
-            <div class="flex gap-5">
-              <i class="pi pi-trash cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-              <i class="pi pi-pencil cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-            </div>
-          </div>
-        </li>
-        <li class="border-b-2 border-yellow px-5  py-5">
-          <div class="flex justify-between">
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, qui? </h2>
-              <span class="badge badge-start">incomplète</span>
-            </div>
-            <div class="flex gap-5">
-              <i class="pi pi-trash cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-              <i class="pi pi-pencil cursor-pointer hover:text-yellow" style="font-size: 1.5rem"></i>
-            </div>
-          </div>
-        </li>
-      </ul>
-
-    </div>
-  </div>
-</section>
+<app-task-home/>
