--- a/src/app/modules/task/presentation/components/task-header/task-header.component.html
+++ b/src/app/modules/task/presentation/components/task-header/task-header.component.html
@@ -1,8 +1,11 @@
 <div class=" border-b-2 border-blue flex justify-between items-center px-5 py-5">
-    <h2 class="text-red-default">tâches Incomplètes: <strong>564</strong></h2>   
-    <div class="flex gap-5 items-center">
-      <h2 class="cursor-pointer active">Tous les tâches</h2>
-      <h2 class="cursor-pointer">tâches Terminées</h2>
-      <h2 class="cursor-pointer">tâches Incomplètes</h2>
-    </div>
+  <h2  [ngClass]="{'text-red-default':isActiveItem(false),'text-green-default':isActiveItem(true)}">Total tâches: <strong>{{taskListLength$| async}}</strong></h2>
+  <div class="flex gap-5 items-center">
+    <h2 (click)="runGetTaskList()" class="cursor-pointer" [ngClass]="{'active':isActiveItem()}">Tous les
+      tâches</h2>
+    <h2 (click)="runGetTaskList(true)" class="cursor-pointer" [ngClass]="{'active':isActiveItem(true) }">tâches
+      Terminées</h2>
+    <h2 (click)="runGetTaskList(false)" class="cursor-pointer" [ngClass]="{'active':isActiveItem(false) }">tâches
+      Incomplètes</h2>
   </div>
+</div>
