--- a/src/app/modules/task/presentation/pages/task-home/task-home.page.html
+++ b/src/app/modules/task/presentation/pages/task-home/task-home.page.html
@@ -1,12 +1,14 @@
-<app-header/>
-<app-add-task/>
+<app-header />
+<app-add-task />
 <section class="relative bottom-44">
-    <div class="flex justify-center">
-      <div
-        class="h-full container max-w-screen-md   rounded-lg shadow-lg   bg-white flex flex-col  overflow-hidden">
-        <app-task-header/>
-        <app-task-body/>
-        <app-task-footer/>
-      </div>
+  <div class="flex justify-center">
+    <div class="h-full container max-w-screen-md   rounded-lg shadow-lg   bg-white flex flex-col  overflow-hidden">
+      <app-task-header />
+      <app-task-body />
+      <app-task-footer />
     </div>
-  </section>
+  </div>
+  <footer class="text-center mt-4">
+    <h3 class="font-medium">Yacou Keita © Tous droits réservés.</h3>
+  </footer>
+</section>
