--- a/src/app/modules/task/presentation/components/add-task/add-task.component.html
+++ b/src/app/modules/task/presentation/components/add-task/add-task.component.html
@@ -1,7 +1,7 @@
 <section class="mb-5 relative bottom-44">
-  <div class="flex justify-center">
-    <form class="container max-w-screen-md flex gap-5">
-      <input [formControl]="addTaskFrom" class="custom-input custom-input-white" placeholder="Saisissez la tâche" />
+  <div class="flex justify-center px-2 md:px-0">
+    <form class="container max-w-screen-md flex flex-col sm:flex-row gap-5">
+      <input [formControl]="addTaskFrom" class="custom-input custom-input-white " placeholder="Saisissez la tâche" />
       <p-button (onClick)="runAddTask()" class="custom-btn" [disabled]="addTaskFrom.invalid"
         [ngClass]="{'bg-gray': addTaskFrom.invalid, 'bg-yellow':addTaskFrom.valid}" label="Ajouter"
         icon="pi pi-plus-circle" />
