--- a/src/app/modules/task/presentation/components/header/header.component.html
+++ b/src/app/modules/task/presentation/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="bg-blue pt-6 h-64 text-center">
-    <h1 class="uppercase font-bold text-white text-2xl ">Bienvenue sur votre gestionnaire de tâche
+    <h1 class="uppercase font-bold text-white text-1xl md:text-2xl">Bienvenue sur votre gestionnaire de tâche
     </h1>
 </header>
