--- a/src/app/modules/task/presentation/pages/task-home/task-home.page.html
+++ b/src/app/modules/task/presentation/pages/task-home/task-home.page.html
@@ -1,7 +1,7 @@
 <app-header />
 <app-add-task />
 <section class="relative bottom-44">
-  <div class="flex justify-center">
+  <div class="flex justify-center px-2 md:px-0">
     <div class="h-full container max-w-screen-md   rounded-lg shadow-lg   bg-white flex flex-col  overflow-hidden">
       <app-task-header />
       <app-task-body />
