--- a/src/app/modules/task/presentation/pages/components/task-header/task-header.component.html
+++ b/src/app/modules/task/presentation/pages/components/task-header/task-header.component.html
@@ -1,7 +1,7 @@
 <div class="border-b-2 border-blue flex flex-col md:flex-row justify-between items-center px-2 md:px-5 py-5">
   <h2  [ngClass]="{'text-red-default':isActiveItem(false),'text-green-default':isActiveItem(true)}">Total tâches: <strong>{{taskListLength$| async}}</strong></h2>
   <div class="flex gap-5 items-center">
-    <h2 (click)="runGetTaskList()" class="cursor-pointer" [ngClass]="{'active':isActiveItem()}">Tous les
+    <h2 (click)="runGetTaskList()" class="cursor-pointer" [ngClass]="{'active':isActiveItem()}">Toutes les
       tâches</h2>
     <h2 (click)="runGetTaskList(true)" class="cursor-pointer" [ngClass]="{'active':isActiveItem(true) }">tâches
       Terminées</h2>
