--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body {
 
 
 .custom-input {
-    @apply p-3 w-full rounded-sm focus:ring-0  text-base outline-none transition-colors duration-200 ease-in-out
+    @apply p-3 w-full rounded-lg focus:ring-0  text-base outline-none transition-colors duration-200 ease-in-out
 }
 
 .custom-input-blue {
@@ -60,9 +60,6 @@ body {
     @apply bg-green-200 text-green-600 border border-green-default
 }
 
-.active {
-    @apply bg-blue p-2 text-white font-bold
-}
 
 .custom-dropdown {
     @apply rounded-lg focus:ring-0 focus:ring-blue border border-blue focus:border-blue
