--- a/src/app/modules/task/presentation/pages/components/task-header/task-header.component.html
+++ b/src/app/modules/task/presentation/pages/components/task-header/task-header.component.html
@@ -1,6 +1,6 @@
 <div class="border-b-2 border-blue flex flex-col md:flex-row justify-between items-center px-2 md:px-5 py-5">
   <div class="container flex flex-col md:flex-row gap-5 items-center">
-    <input [formControl]="searchOptionFrom" class="custom-input custom-input-blue"
+    <input (input)="runSearchTask()" [formControl]="searchOptionFrom" class="custom-input custom-input-blue"
       placeholder="Rechercher une tâche spécifique" />
     <p-dropdown class="custom-dropdown" (onChange)="runGetTaskList()" [options]="filterOptionList" optionValue="value"
       [formControl]="filterOptionFrom" placeholder="Option de filtre" optionLabel="label" />
